force-app/main/default/objects/Quote/fields/Mat_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Mat_Cliente__c</fullName>
    <description
  >Conserva el nombre del cliente al generar esta cotización.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Cliente cotizado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>