force-app/main/default/objects/Quote/fields/Mat_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Mat_Descuento__c</fullName>
    <label>Descuento</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>