force-app/main/default/objects/Quote/fields/Mat_Enviar_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Mat_Enviar_aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a aprobación</label>
    <type>Checkbox</type>
</CustomField>