force-app/main/default/objects/Quote/fields/Mat_Fecha_generacion__c.field-meta.xml
<CustomField>
    <fullName>Mat_Fecha_generacion__c</fullName>
    <description
  >Identifica cuándo se guardó esta versión de la cotización.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Fecha de generación</label>
    <type>DateTime</type>
</CustomField>