force-app/main/default/objects/Quote/fields/Mat_Moneda__c.field-meta.xml
<CustomField>
    <fullName>Mat_Moneda__c</fullName>
    <description
  >Conserva la moneda indicada en la oportunidad al generar esta cotización.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Moneda cotizada</label>
    <length>10</length>
    <type>Text</type>
</CustomField>