force-app/main/default/objects/Quote/fields/Mat_Nombre_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Mat_Nombre_oportunidad__c</fullName>
    <description
  >Conserva el nombre de la oportunidad al generar esta cotización.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Nombre de oportunidad cotizada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>