force-app/main/default/objects/Quote/fields/Mat_Tarifa_moneda_extranjera__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tarifa_moneda_extranjera__c</fullName>
    <label>Tarifa moneda extranjera</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>