force-app/main/default/objects/Quote/fields/Mat_Tarifa_negociada__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tarifa_negociada__c</fullName>
    <label>Tarifa negociada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>